--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wander Travel Agency | Web Desgin</title>
+    <title>Wander Travel Agency </title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -43,13 +43,12 @@
 
 <section class="home" id="home">
 
-    <div class="content">
-        <h3>Discover with us</h3>
-        <span>Your Journey, Our Passion </span>
-        <p>Discover unforgettable travel experiences tailored just for you. Whether you're seeking a relaxing beach getaway, an adventurous expedition, or a luxurious vacation, we have the perfect itinerary.</p>
-        <a href="#" class="btn">Travel Now</a>
-    </div>
-
+  <div class="content">
+    <h3>Discover with us</h3>
+    <span>Your Journey, Our Passion </span>
+    <p>Discover unforgettable travel experiences tailored just for you. Whether you're seeking a relaxing beach getaway, an adventurous expedition, or a luxurious vacation, we have the perfect itinerary.</p>
+    <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAANAAUBgWadUMzFPWFA2NEhTVkc4S1dVWU0zOTFQVVk0My4u" class="btn">Travel Now</a>
+</div>
 </section>
 
 <!-- home ends -->
@@ -438,14 +437,7 @@
 
     <div class="row">
 
-        <form id="myForm">
-            <input type="text" name="name" placeholder="Name" class="box" autocomplete="name" required>
-            <input type="email" name="email" placeholder="Email" class="box" autocomplete="email" required>
-            <input type="tel" name="number" placeholder="Phone Number" class="box" autocomplete="tel" required>
-            <textarea name="message" placeholder="Message" class="box" cols="30" rows="10" autocomplete="off" required></textarea>
-            <input type="submit" value="Send Message" class="btn">
-        </form>
-    
+       <iframe width="640px" height="480px" src="https://forms.office.com/r/JEbPW8J8AQ?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
         <!-- Correct Script Path -->
         <script src="js/form-handler.js"></script>
 
