--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@
 <!-- home starts  -->
 
 <section class="home" id="home">
-
-  <div class="content">
-    <h3>Discover with us</h3>
-    <span>Your Journey, Our Passion </span>
-    <p>Discover unforgettable travel experiences tailored just for you. Whether you're seeking a relaxing beach getaway, an adventurous expedition, or a luxurious vacation, we have the perfect itinerary.</p>
-    <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAANAAUBgWadUMzFPWFA2NEhTVkc4S1dVWU0zOTFQVVk0My4u" class="btn">Travel Now</a>
-</div>
+    <div class="content">
+        <h3>Discover with us</h3>
+        <span>Your Journey, Our Passion </span>
+        <p>Discover unforgettable travel experiences tailored just for you. Whether you're seeking a relaxing beach getaway, an adventurous expedition, or a luxurious vacation, we have the perfect itinerary.</p>
+        <a href="https://form.jotform.com/250881156396061" class="btn" target="_blank">Travel Now</a>
+    </div>
 </section>
 
 <!-- home ends -->
@@ -436,8 +435,7 @@
     <h1 class="heading"> <span> contact </span> us </h1>
 
     <div class="row">
-
-       <iframe width="640px" height="480px" src="https://forms.office.com/r/JEbPW8J8AQ?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+        <script type="text/javascript" src="https://form.jotform.com/jsform/250881156396061"></script>
         <!-- Correct Script Path -->
         <script src="js/form-handler.js"></script>
 
